# StaticScanner_cpp

./: .gitattributes  .gitignore  CMakeLists.txt  CurrentExecutable.txt  README.md  config.txt  resetUSB.sh  runCmake.sh  startServer.sh  test.py
exe/: SimpleRecorder.cpp  StaticScanner.cpp  Test.cpp  VolumeScanner.cpp
pchs/: pch.h
resources/ogre/configs/: plugins.cfg  resources.cfg
resources/ogre/fonts/: Pandia.fontdef
resources/ogre/materials/: Pandia.material
resources/ogre/packs/: ReadMe  pack.sh
resources/ogre/packs/SdkTrays/: SdkTrays.fontdef  SdkTrays.overlay
setup/: README.md  initAnacondaEnv.sh  initFolders.sh  initGit.sh  initKinect.sh  initOgreBuild.sh  initOpenCVFix.sh  initUSBLimit.sh  installAllDependencies.sh  installAnaconda.sh  installEnsenso.sh  installPhoxi.sh  installZivid.sh
setup/initFiles/: .git-credentials  .gitconfig
src/: CameraWrapper.cpp  CameraWrapper.h  GlobalDefines.cpp  GlobalDefines.h  KinectUndistort.cpp  KinectUndistort.h  PandiaTimer.h  PhoxiUtil.cpp  PhoxiUtil.h  Plane.cpp  Plane.h  ScanningSingleton.cpp  ScanningSingleton.h  configVariables.cpp  configVariables.h  util.cpp  util.h
src/GUI/: ColoredGradient2D.cpp  ColoredGradient2D.h  GUIImage.cpp  GUIImage.h  StaticScannerGUI.cpp  StaticScannerGUI.h  guiUtil.cpp  guiUtil.h
src/calibration/: CalibrationSingleton.cpp  CalibrationSingleton.h  calibutil.cpp  calibutil.h
src/pythonCompatible/: VolumeCalculation.cpp  VolumeCalculation.h  cameraBindings.cpp  example_stuff.cpp
src/volume/: VolumeGUI.cpp  VolumeGUI.h  VolumeSingleton.cpp  VolumeSingleton.h  VolumeThread.cpp  VolumeThread.h  frustum.cpp  frustum.h
webinterface/: EmergencyCoordinator.ini  main.py  package.json  requirements.txt  wsgi.py
webinterface/core/: __init__.py  api_base.py  api_test.py  auth.py  fillup_database.py  models.py  requirements.txt  views.py
webinterface/core/static/css/: loading.css  stream_style.css  style.css
webinterface/core/templates/: base.html  login.html  pandia.html
